--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
@@ -7,6 +7,7 @@
     .mat-column-netWeightReleaseOrnament{
         display: flex;
         flex-direction: column;
+        flex: 0 0 5%;
     }
 
     .mat-column-netWeightRemainingOrnament{
@@ -43,6 +44,7 @@
     .mat-column-view {
         display: flex;
         justify-content: center;
+        flex: 0 0 5%;
     }
     .mat-column-loanAmount{
         padding-right: 25px;
@@ -69,4 +71,5 @@
         padding-right: 25px;
         justify-content: flex-end;
     }
+    
 }
