--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
@@ -15,6 +15,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        flex: 0 0 6%;
     }
     .mat-column-loanId {
         display: flex;
@@ -48,6 +49,7 @@
     .mat-column-penalInterest{
         padding-right: 25px;
         justify-content: flex-end;
+        flex: 0 0 4%;
     }
     .mat-column-interestAmount{
         padding-right: 25px;
@@ -56,9 +58,20 @@
     .mat-column-ornamentReleaseAmount{
         padding-right: 25px;
         justify-content: flex-end;
+        flex: 0 0 4.5%;
     }
     .mat-column-currentLocation{
         flex: 0 0 5%;
     }
-    
+    .mat-column-view {
+        display: flex;
+        justify-content: center;
+        flex: 0 0 5%;
+    }
+    .mat-column-totalDeductionWeight {
+        flex: 0 0 5%;
+    }
+    .mat-column-totalGrossWeight {
+        flex: 0 0 5%;
+    }
 }
