--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
@@ -26,4 +26,14 @@
         text-align: right;
         padding-right: 6%;
     }
+    .th-padding-left {
+		padding-left: 3%;
+    	width: 10%;
+	}
+.th-padding-right {
+		padding-right: 2% !important;
+	}
+    .padding-right {
+        padding-right: 4% !important;;
+    }
 }
