--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -35,9 +35,12 @@
                 <ng-container matColumnDef="applyLoan">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
-                        <button class="apply-kyc"
-                            *ngIf="!loan?.isLoanSubmitted && loan?.loanTransfer?.loanTransferCurrentStage == '6' && permission.loanApplicationAdd && !loan.loanStatusForAppraiser"
-                            (click)="applyLoan(loan)">Apply Loan</button></mat-cell>
+                        <div class="padding-left">
+                            <button class="apply-kyc "
+                                *ngIf="!loan?.isLoanSubmitted && loan?.loanTransfer?.loanTransferCurrentStage == '6' && permission.loanApplicationAdd && !loan.loanStatusForAppraiser"
+                                (click)="applyLoan(loan)">Apply Loan</button>
+                        </div>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="appraiserStatus">
