pkt-fe::branch in pkt tracking, UI changes

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -1,17 +1,8 @@
 <kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
 <kt-portlet>
     <kt-portlet-body>
-        <!-- <button mat-icon-button class="btn-transparent" ngbDropdown>
-            <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown2" role="button">
-                <img src="../../../../../../assets/media/icons/options.svg" alt="">
-                <mat-icon>more_vert</mat-icon>
-            </a>
-            <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
-                <a ngbDropdownItem (click)="applyLoan(loan)">Apply Loan</a>
-                <a ngbDropdownItem (click)="transferLoan(loan)">Transfer Loan</a>
-            </div>
-        </button> -->
-        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'auto'}">
+        <div class="mat-table__wrapper" [class.filter]="(filteredDataList | json) !== '{}'"
+            [ngStyle]="{'overflow-x':'auto'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
