--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.html
@@ -163,9 +163,9 @@
                         </ng-container>
                         <ng-container>
                             <button
-                                *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch in'"
-                                style="width: 130px;" class="apply-kyc"
-                                (click)="collect(item?.masterLoanId,item.masterLoan.packet,item.masterLoan)">Collect</button>
+                                *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch in' || item?.masterLoan?.locationData[0]?.packetLocationId == 2"
+                                style="width: 130px;" class="apply-kyc" packetLocationId
+                                (click)="collect(item?.masterLoanId,item.masterLoan.packet,item.masterLoan, item?.masterLoan?.locationData[0]?.packetLocationId)">Collect</button>
                         </ng-container>
                         <ng-container>
                             <button
