--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
@@ -15,6 +15,9 @@
     .padding-left {
         padding-left: 4%;
     }
+    .padding-right {
+        padding-right: 4%;
+    }
     .table-padding-start {
         padding-left: 4%;
     }
