--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -437,7 +437,7 @@
                             </div>
                         </ng-container>
                         <ng-container *ngIf="identityImageArray?.length > 0">
-                            <div class="col-4" *ngFor="let pass of identityImageArray, index as idx">
+                            <div class="kt-margin-r-30" *ngFor="let pass of identityImageArray, index as idx">
                                 <div class="img-container">
                                     <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
                                         style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
@@ -629,7 +629,7 @@
                         </div>
                     </ng-container>
                     <ng-container *ngIf="addressImageArray1?.length > 0">
-                        <div class="col-4" *ngFor="let pass of addressImageArray1, index as idx">
+                        <div class="kt-margin-r-30" *ngFor="let pass of addressImageArray1, index as idx">
                             <div class="img-container">
                                 <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
                                     style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
@@ -850,7 +850,7 @@
                             </div>
                         </ng-container>
                         <ng-container *ngIf="addressImageArray2?.length > 0">
-                            <div class="col-4" *ngFor="let pass of addressImageArray2, index as idx">
+                            <div class="kt-margin-r-30" *ngFor="let pass of addressImageArray2, index as idx">
                                 <div class="img-container">
                                     <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
                                         style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
@@ -1237,7 +1237,8 @@
                                         Name</label>
                                 </div>
                                 <div class="col-7">
-                                    <input type="text" class="form-control" placeholder="Name" formControlName="spouseName"
+                                    <input type="text" class="form-control" placeholder="Name"
+                                        formControlName="spouseName"
                                         value="{{ data.customerKycReview?.customerKycPersonal?.spouseName | titlecase }}"
                                         [class.isError]="customerKycPersonal.controls.spouseName.touched && customerKycPersonal.controls.spouseName.invalid" />
                                     <mat-error
