--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
@@ -1,7 +1,7 @@
 :host{
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 290% !important;
+        width: 300% !important;
     }
 
     .mat-column-netWeightReleaseOrnament{
@@ -73,7 +73,7 @@
     .mat-column-view {
         display: flex;
         justify-content: center;
-        flex: 0 0 5%;
+        flex: 0 0 4%;
     }
     .mat-column-totalDeductionWeight {
         flex: 0 0 5%;
@@ -91,6 +91,12 @@
         flex: 0 0 5%;
     }
     .mat-column-loanStartDate {
+        flex: 0 0 4%;
+    }
+    .mat-column-parnterName {
+        flex: 0 0 4%;
+    }
+    .mat-column-partnerBranch {
         flex: 0 0 4%;
     }
 }
