changes in purches voucher

--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -50,21 +50,20 @@
                     <div class="row">
                         <div class="col-6 text-left">
                             <div class="row">
-                                <div class="col-6 text-right"><b>LANDLINE NO: </b></div>
-                                <div class="col-6 text-left">
-                                    <div>022-61420000</div>
+                                <div class="col-3 text-left"><b>LANDLINE NO: </b></div>
+                                <div class="col-9 text-left">
                                     <div>022-61420000</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 text-right">
+                        <div class="col-6">
                             <div class="row">
-                                <div class="col-6 text-right"><b>Website :</b></div>
-                                <div class="col-6"></div>
+                                <div class="col-3 text-left"><b>Website :</b></div>
+                                <div class="col-9 text-left"></div>
                             </div>
                             <div class="row">
-                                <div class="col-6 text-right"><b>Email :</b></div>
-                                <div class="col-6 text-left">help@augmont.in</div>
+                                <div class="col-3 text-left"><b>Email :</b></div>
+                                <div class="col-9 text-left">help@augmont.in</div>
                             </div>
                         </div>
                     </div>
@@ -80,13 +79,12 @@
                     <div class="row">
                         <div class="col-6 text-left">
                             <div ><b>{{this.customerName}}</b></div>
-                            <div ><b>Address: </b></div>
-                            <div style="word-wrap: break-word">
+                            <div style="word-wrap: break-word"><b>Address: </b>
                                 {{this.customerAddress}}
                             </div>
-                            <div>{{this.pinCode}}</div>
-                            <div>{{this.customerSatte}}</div>
-                            <div ><b>PAN No: </b><span> {{this.panNo}}</span></div>
+                            <!-- <div>{{this.pinCode}}</div> -->
+                            <!-- <div>{{this.customerSatte}}</div> -->
+                            <div ><b>PAN No:</b><span> {{this.panNo}}</span></div>
                         </div>
                         <div class="col-6">
                             <div ><b>Voucher Number: </b><span> {{this.voucherNumber}}</span></div>
